# midgard

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  Toasty.toml  clippy.toml  spec.md
.playwright-mcp/: page-2026-06-29T09-12-41-295Z.yml
crates/midgard-agent/: Cargo.toml
crates/midgard-agent/src/: lib.rs
crates/midgard-controller/: Cargo.toml
crates/midgard-controller/src/: lib.rs
crates/midgard-core/src/: lib.rs
crates/midgard-k8s/: Cargo.toml
crates/midgard-plugin-example/: Cargo.toml
crates/midgard-server/: Cargo.toml
crates/midgard-server/src/: main.rs
crates/midgard-tools/: Cargo.toml
crates/midgard-tools/src/: lib.rs
crates/midgard-tools/tests/: tool_registry.rs
midgard-agent/: Cargo.toml
midgard-agent/src/: completion.rs  lib.rs  model.rs  openai.rs  provider.rs  runner.rs
midgard-agent/tests/: agent_contract.rs
midgard-cli/: Cargo.toml
midgard-cli/src/: lib.rs  main.rs
midgard-config/: Cargo.toml
midgard-config/src/: lib.rs
midgard-controller/: Cargo.toml
midgard-controller/src/: lib.rs
midgard-controller/tests/: plugin_contract.rs
midgard-core/: Cargo.toml
midgard-core/src/: lib.rs
midgard-core/tests/: core_contract.rs
midgard-docker/: Cargo.toml
midgard-docker/src/: client.rs  error.rs  lib.rs  operation.rs  plugin.rs  tool.rs
midgard-docker/tests/: docker_plugin.rs
midgard-k8s/: Cargo.toml
midgard-k8s/src/: lib.rs
midgard-k8s/tests/: k8s_contract.rs
midgard-operator/: Cargo.toml
midgard-operator/src/: conditions.rs  control.rs  controller.rs  finalizers.rs  lease.rs  lib.rs  probe.rs  traits.rs
midgard-operator/tests/: operator_contract.rs
midgard-plugin-example/: Cargo.toml
midgard-plugin-example/src/: lib.rs
midgard-plugin-example/tests/: example_plugin.rs
midgard-protocol/: Cargo.toml  build.rs
midgard-protocol/proto/midgard/operator/v1/: operator.proto
midgard-protocol/src/: lib.rs
midgard-protocol/tests/: protocol_contract.rs
midgard-server/: Cargo.toml
midgard-server/src/: auth.rs  lib.rs  operator.rs  runtime.rs  workspace.rs
midgard-server/tests/: api_contract.rs  type_exports.rs
midgard-storage/: Cargo.toml  Toasty.toml
midgard-storage/src/: auth.rs  lib.rs  memory.rs  org.rs  rbac.rs  store.rs
midgard-storage/src/postgres/: codec.rs  mod.rs  models.rs
midgard-storage/toasty/: history.toml
midgard-storage/toasty/migrations/: 0000_create_agent_sessions_and_messages.sql  0001_add_react_session_trace.sql  0002_create_agent_approval_records.sql  0003_create_auth_tables.sql  0004_create_organizations_and_workspaces.sql  0005_add_rbac_roles.sql  0006_add_workspace_runtime_and_middleware_instances.sql
midgard-storage/toasty/snapshots/: 0000_snapshot.toml  0001_snapshot.toml  0002_snapshot.toml  0003_snapshot.toml  0004_snapshot.toml  0005_snapshot.toml  0006_snapshot.toml
midgard-tools/: Cargo.toml
midgard-tools/src/: lib.rs
midgard-tools/tests/: tool_registry.rs
midgard-ui/: package.json
midgard-web/: bun.lockb  next-env.d.ts  package.json
midgard-web/app/: globals.css  layout.tsx  page.tsx
midgard-web/app/admin/roles/: page.tsx
midgard-web/app/admin/users/: page.tsx
midgard-web/app/organizations/: page.tsx
midgard-web/app/organizations/new/: page.tsx
midgard-web/app/orgs/[orgSlug]/: page.tsx
midgard-web/app/orgs/[orgSlug]/settings/members/: page.tsx
midgard-web/app/orgs/[orgSlug]/settings/roles/: page.tsx
midgard-web/app/orgs/[orgSlug]/workspaces/[workspaceSlug]/: page.tsx
midgard-web/app/orgs/[orgSlug]/workspaces/[workspaceSlug]/settings/: page.tsx
midgard-web/components/: AgentConsole.tsx  AuthGate.tsx  ClusterOverview.tsx  HomePageClient.tsx  LoginPage.tsx  Metric.tsx  MiddlewareDashboard.tsx  NewOrganizationPageClient.tsx  NoWorkspaceAccess.tsx  OrganizationHomePageClient.tsx  OrganizationSetupPage.tsx  OrganizationsPageClient.tsx  PluginCatalog.tsx  RbacAdmin.tsx  RbacAdminPageClients.tsx  RootRedirect.tsx  SelectControl.tsx  WorkspacePageClient.tsx  WorkspaceRoute.tsx  WorkspaceSettingsPageClient.tsx  WorkspaceShell.tsx
midgard-web/lib/: api.ts  events.ts  types.ts
operators/midgard-valkey-operator/: Cargo.toml
operators/midgard-valkey-operator/config/default/: manager_metrics_patch.yaml
operators/midgard-valkey-operator/config/manager/: kustomization.yaml  manager.yaml
operators/midgard-valkey-operator/src/: error.rs  lease.rs  lib.rs  protocol.rs  runtime.rs  valkey.rs
operators/midgard-valkey-operator/src/controller/: cluster.rs  config.rs  mod.rs  node.rs  resources.rs  users.rs
