[workspace]
members = [
    "midgard-agent",
    "midgard-controller",
    "midgard-core",
    "midgard-k8s",
    "midgard-plugin-example",
    "midgard-server",
    "midgard-tools",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/midgard"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
midgard-agent = { path = "midgard-agent" }
midgard-controller = { path = "midgard-controller" }
midgard-core = { path = "midgard-core" }
midgard-plugin-example = { path = "midgard-plugin-example" }
midgard-tools = { path = "midgard-tools" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
