[workspace]
members = [
    "midgard-agent",
    "midgard-cli",
    "midgard-config",
    "midgard-controller",
    "midgard-core",
    "midgard-k8s",
    "midgard-plugin-example",
    "midgard-server",
    "midgard-storage",
    "midgard-tools",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/example/midgard"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
http = "1"
midgard-agent = { path = "midgard-agent" }
midgard-config = { path = "midgard-config" }
midgard-controller = { path = "midgard-controller" }
midgard-core = { path = "midgard-core" }
midgard-plugin-example = { path = "midgard-plugin-example" }
midgard-server = { path = "midgard-server" }
midgard-tools = { path = "midgard-tools" }
midgard-storage = { path = "midgard-storage" }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
toml = "1.1"
toasty = { version = "0.7", features = ["migration", "postgresql"] }
toasty-cli = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "12.0.1", features = ["chrono-impl", "serde-json-impl", "uuid-impl"] }
uuid = { version = "1", features = ["serde", "v4"] }
