[workspace]
members = [
    "midgard-agent",
    "midgard-cli",
    "midgard-config",
    "midgard-controller",
    "midgard-core",
    "midgard-k8s",
    "midgard-plugin-example",
    "midgard-protocol",
    "midgard-server",
    "midgard-storage",
    "midgard-tools",
    "operators/midgard-valkey-operator",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/example/midgard"
version = "0.1.0"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "env"] }
dirs = "6"
futures-util = "0.3"
hex = "0.4"
http = "1"
k8s-openapi = { version = "0.27.1", features = ["latest", "schemars"] }
kube = { version = "3.1.0", features = ["client", "derive", "runtime", "rustls-tls"] }
midgard-agent = { path = "midgard-agent" }
midgard-config = { path = "midgard-config" }
midgard-controller = { path = "midgard-controller" }
midgard-core = { path = "midgard-core" }
midgard-plugin-example = { path = "midgard-plugin-example" }
midgard-protocol = { path = "midgard-protocol" }
midgard-server = { path = "midgard-server" }
midgard-tools = { path = "midgard-tools" }
midgard-storage = { path = "midgard-storage" }
midgard-valkey-operator = { path = "operators/midgard-valkey-operator" }
prost = "0.14"
prost-types = "0.14"
rand = "0.8"
redis = { version = "1.2.2", default-features = false, features = ["acl", "aio", "tokio-comp", "tokio-rustls-comp"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
toml = "1.1"
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
toasty = { version = "0.7", features = ["migration", "postgresql"] }
toasty-cli = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "12.0.1", features = ["chrono-impl", "serde-json-impl", "uuid-impl"] }
uuid = { version = "1", features = ["serde", "v4"] }
