[package]
name = "midgard-agent"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
midgard-core.workspace = true
midgard-tools.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
