[package]
name = "midgard-cli"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "midgard"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
midgard-agent.workspace = true
midgard-config.workspace = true
midgard-server.workspace = true
midgard-storage.workspace = true
tokio.workspace = true
tonic.workspace = true
toasty-cli.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
