[package]
name = "midgard-config"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
dirs.workspace = true
midgard-core.workspace = true
rand.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
