[package]
name = "midgard-controller"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
midgard-core.workspace = true
midgard-tools.workspace = true
serde.workspace = true

[dev-dependencies]
tokio.workspace = true
