[package]
name = "midgard-operator"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
midgard-core.workspace = true
midgard-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
