[package]
name = "midgard-plugin-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
midgard-controller.workspace = true
midgard-core.workspace = true
midgard-tools.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
