[package]
name = "midgard-server"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
http = "1"
midgard-agent.workspace = true
midgard-controller.workspace = true
midgard-core.workspace = true
midgard-plugin-example.workspace = true
midgard-storage.workspace = true
midgard-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
