[package]
name = "midgard-server"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
http.workspace = true
midgard-agent.workspace = true
midgard-controller.workspace = true
midgard-core.workspace = true
midgard-plugin-example.workspace = true
midgard-storage.workspace = true
midgard-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ts-rs.workspace = true
uuid.workspace = true
