[package]
name = "midgard-storage"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
midgard-agent.workspace = true
midgard-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toasty.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
