[package]
name = "midgard-storage"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
midgard-agent.workspace = true
midgard-core.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toasty.workspace = true
ts-rs.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
