[package]
name = "midgard-server"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
midgard-agent = { path = "../midgard-agent" }
midgard-controller = { path = "../midgard-controller" }
midgard-core = { path = "../midgard-core" }
midgard-plugin-example = { path = "../midgard-plugin-example" }
midgard-tools = { path = "../midgard-tools" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
