[package]
name = "midgard-valkey-operator"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
futures-util.workspace = true
hex.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
midgard-protocol.workspace = true
rand.workspace = true
redis.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
